# cpp_by_example

./: .gitignore  Makefile  README.txt  cpp_semicolons.txt
CTRP_deduce_this/: CTRP_deduce_this.pro  main.cpp
Class_Constructor_Operation/: Class_Constructor_Operations.cpp  Class_Constructor_Operations.pro  class_all.h
DataFrame_hello_world/: DataFrame_hello_world.pro  main.cpp
Inheritance_Interface/: Inheritance_Interface.pro  main.cpp
Interface/: CMakeLists.txt  main.cpp
Linux_WSL_ConsoleApp/: Linux_WSL_ConsoleApp.sln
Qt_specific_stuff/qt_QtQuickApplication_template_cmake/: CMakeLists.txt  gr_test_class_cpp.cpp  gr_test_class_cpp.hpp  gr_test_class_win_include_all_stuff.cpp  gr_test_class_win_include_all_stuff.hpp  main.cpp
Swap_Performance_Test/: Swap_Performance_Test.cpp  Swap_Performance_Test.pro
Wave_theory/: main.cpp
alternative_operator_tokens_eq/: alternative_operator_tokens_eq.pro  main.cpp
andrei_mapping_integral_constants_to_types/: andrei_mapping_integral_constants_to_types.pro  main.cpp
argument_as_var_or_ptr_to_var-TCPL_3_4_3/: argument_as_var_or_ptr_to_var-TCPL_3_4_3.pro  main.cpp
array_fill_with_enum_class/: main.cpp
array_init/: array_init.pro  main.cpp
array_size/: main.cpp
atoi/: main.cpp
beast-http_server_coro_ssl/: beast-http_server_coro_ssl.pro  main.cpp
beast_http_server_small/: beast_http_server_small.pro  main.cpp
binary_tree_to_string/: main.cpp
bind_function_variant/: main.cpp
blockchain_sequence/: main.cpp
boost_beast_http_server_flex/: boost-beast_http_server_flex.pro  main.cpp
boost_ext_ut/: boost_ext_ut.pro  main.cpp
boost_json/: CMakeLists.grostig.txt  CMakeLists.txt  README.txt  cpp_llm_prompt_chatgpt.json  cpp_llm_prompt_claude.json  cpp_llm_prompt_gemini.json  global_entities.cpp  global_entities.hpp  main.cpp  qt_CMakeLists_grostig.txt
boosttest_hello_world/: boosttest_hello_world.pro  main.cpp  main_stable.cpp  main_ut.cpp
callable_object_to_algorithms/: main.cpp
ccia_code_examples_plus/: CMakeLists.txt  README.md
ccia_code_examples_plus/listings/: listing_10.2.cpp  listing_2.1.cpp  listing_2.2.cpp  listing_2.3.cpp  listing_2.4.cpp  listing_2.5.cpp  listing_2.6.cpp  listing_2.7.cpp  listing_2.8.cpp  listing_3.4.cpp  listing_4.15.atm.cpp  listing_4.15.cpp  listing_4.16.atm.getting_pin.cpp  listing_4.16.cpp  listing_4.17.cpp  listing_4.20.cpp  listing_4.24.cpp  listing_4.26.cpp  listing_4.27.cpp  listing_6.1.cpp  listing_6.9.cpp  listing_7.17.cpp  listing_8.6.cpp  listing_c.1.cpp  listing_c.10.cpp  listing_c.2.cpp  listing_c.3.cpp  listing_c.4.cpp  listing_c.5.cpp  listing_c.6.cpp  listing_c.7.cpp  listing_c.8.cpp  listing_c.9.cpp  listing_c.all.cpp  listing_c.all.nomain.cpp  listing_c.classes.cpp  listing_c.main.cpp
cereal/: cereal.pro  main.cpp
char_transformer/: char_transformer.pro  main.cpp
class_fully_defined/: CMakeLists.txt  main.cpp
class_fully_defined/src/: main.cpp
closures/: main.cpp
cloud2/: main.cpp
cloud_q1/: main.cpp
cmake_qt_A_vs-heavy_A_vs-code/: main.cpp
combinations_string_a/: main.cpp
combinations_string_b/: main.cpp
combinations_string_c/: combinations_string_c.pro  main.cpp
constructor_derived_class/: main.cpp
copying_c_arrays/: main.cpp
cpp_callable_object_to_algorithms/: callable_object_to_algorithms.pro  main.cpp
cpp_char_ptr_init_by_string_literal_deprecation/: main.cpp
cpp_cmake_grant/: CMakeLists.txt  global_entities.hpp  grostig_tools_BRIEF.pro.txt  main.cpp  math_grostig.cpp.txt
cpp_concept_print_container_operator_insert/: class_with_elements.cpp  class_with_elements.hpp  class_with_elements2.cpp  class_with_elements2.hpp  cpp_concept_print_container_operator_insert.pro  main.cpp
cpp_concurrency_overview/: CMakeLists.txt  main.cpp
cpp_const_function_return_value_rvalue_move/: main.cpp
cpp_constexpr/: cpp_constexpr.pro  global_entities.cpp  global_entities.hpp  main.cpp
cpp_contract_assertion_AND_fn_specifiers/: main2.cpp
cpp_copy_elision/: compiler_explorer_code.cpp  cpp_copy_elision.pro  main.cpp
cpp_exceptions/: cpp_exceptions.pro  main.cpp
cpp_header_rules/: client_use.cpp  client_use.hpp  cpp_header_rules.pro  main.cpp  my_api.cpp  my_api.hpp
cpp_initialization_struct_ptr_ref/: main.cpp
cpp_inline_copy_elision/: compilation_unit_2_fn.cpp  compilation_unit_2_fn.hpp  cpp_inline_copy_elision.pro  main.cpp
cpp_lippman_13_2_2_Has_Ptr/: CMakeLists.txt  main.cpp
cpp_lvalue_rvalue_forwarding_reference/: cpp_lvalue_rvalue_forwarding_reference.pro  tst_test_suite_case_name.cpp  what_is_this.qtce
cpp_module/: cpp_module.pro  main.cpp  my_module.cpp  my_module.hpp
cpp_operator_ampersand/: cpp_operator_ampersand.pro  main.cpp
cpp_operator_spaceship_three-way-comparison/: boost_headers.hpp  cpp_operator_spaceship_three-way-comparison.pro  main.cpp  math_grostig.cpp  math_grostig.hpp  random_toolkit.hpp
cpp_output_adaptor/: CMakeLists.txt  main.cpp  ostream_joiner_gr.cpp  ostream_joiner_gr.hpp
cpp_pure_virtual_defined_function/: cpp_pure_virtual_defined_function.pro  main.cpp  main_shortened.cpp
cpp_return_closures/: cpp_return_closures.pro  main.cpp
cpp_static/: cpp_static.pro  linkage.cpp  (+14 more)
cpp_widening-ppp3_58/cpp_widening-ppp3_58/: CMakeLists.txt  cpp_widening-ppp3_58.cpp  cpp_widening-ppp3_58.h
designp_singleton_memory_manager/: CMakeLists.txt  MemoryMangager.slnx  README.md
designp_singleton_memory_manager/MemoryCore/: Accountant.cpp  MemoryCore.vcxitems
designp_singleton_memory_manager/MemoryMangager/: MemoryMangager.cpp  MemoryMangager.vcxproj  MemoryMangager.vcxproj.filters
junk/: CMakeLists.txt  main.cpp
mp_unit_hello_world/: CMakeLists.txt  main.cpp
qt_cmake_test/: CMakeLists.txt  CMakeLists_default_qt.txt  CMakeLists_simple_xtd.txt
qt_cmake_test/src/: main.cpp
radio_spectrum_iostreams/: CMakeLists.txt  main.cpp
signal-slot-timer/: CMakeLists.txt  CMakeLists.txt.txt  signal_slot_timer.pro
signal-slot-timer/lib/fteng/: signals.hpp
signal-slot-timer/src/: Feeding_chime.cpp  Feeding_chime.h  STimer.cpp  STimer.h  TimerUesr.h  main.cpp
std_smart_ptrs/: CMakeLists.txt  main.cpp
(+439 files in other folders)
